fix padding too big

--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -58,7 +58,7 @@ nav {
             list-style-image: none !important;
             white-space: nowrap;
             .ui-menu-item-wrapper {
-               padding: 10px 30px;
+               padding: 8px 30px;
                font-size: 14px;
             }
            div {
